--- a/.github/workflows/frontend-deploy.yml
+++ b/.github/workflows/frontend-deploy.yml
@@ -21,8 +21,8 @@ jobs:
       - name: Install Dependencies
         run: npm install
 
-      - name: Build React App
-        run: npm run build
+      - name: Build React App (no CI lint blocking)
+        run: CI=false npm run build
 
       - name: Authenticate to GCP
         uses: google-github-actions/auth@v1
