--- a/.github/workflows/frontend-deploy.yml
+++ b/.github/workflows/frontend-deploy.yml
@@ -1,12 +1,15 @@
-name: Deploy React Frontend to GCP VM
+name: Deploy React Frontend to GCP
 
 on:
   push:
     branches:
-      - master   # change to master if your branch is master
+      - master
+      - gke-release
 
 jobs:
-  deploy:
+  # ==================== VM DEPLOYMENT ====================
+  deploy-to-vm:
+    if: github.ref == 'refs/heads/master'
     runs-on: ubuntu-latest
 
     steps:
@@ -50,3 +53,93 @@ jobs:
             sudo mv ~/frontend-temp/* /opt/frontend/Behaviol-Project-FE/build/ &&
             sudo systemctl restart nginx
           "
+
+  # ==================== GKE DEPLOYMENT ====================
+  deploy-to-gke:
+    if: github.ref == 'refs/heads/gke-release'
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v3
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18'
+
+      - name: Install Dependencies
+        run: npm install
+
+      - name: Build React App (no CI lint blocking)
+        run: CI=false npm run build
+
+      - name: Authenticate to GCP
+        uses: google-github-actions/auth@v1
+        with:
+          credentials_json: ${{ secrets.GCP_SA_KEY }}
+
+      - name: Configure gcloud SDK
+        uses: google-github-actions/setup-gcloud@v1
+        with:
+          project_id: ${{ secrets.GCP_PROJECT_ID }}
+
+      - name: Configure Docker for Artifact Registry
+        run: |
+          gcloud auth configure-docker ${{ secrets.GCP_REGION }}-docker.pkg.dev --quiet
+
+      - name: Build Docker Image
+        run: |
+          docker build -t ${{ secrets.GCP_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/${{ secrets.ARTIFACT_REPO_NAME }}/todo-frontend:${{ github.sha }} .
+          docker tag ${{ secrets.GCP_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/${{ secrets.ARTIFACT_REPO_NAME }}/todo-frontend:${{ github.sha }} \
+            ${{ secrets.GCP_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/${{ secrets.ARTIFACT_REPO_NAME }}/todo-frontend:latest
+
+      - name: Push Docker Image to Artifact Registry
+        run: |
+          docker push ${{ secrets.GCP_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/${{ secrets.ARTIFACT_REPO_NAME }}/todo-frontend:${{ github.sha }}
+          docker push ${{ secrets.GCP_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/${{ secrets.ARTIFACT_REPO_NAME }}/todo-frontend:latest
+
+      - name: Install kubectl
+        uses: azure/setup-kubectl@v3
+
+      - name: Install GKE gcloud auth plugin
+        run: |
+          gcloud components install gke-gcloud-auth-plugin --quiet
+
+      - name: Get GKE Credentials
+        run: |
+          gcloud container clusters get-credentials ${{ secrets.GKE_CLUSTER_NAME }} \
+            --zone=${{ secrets.GKE_ZONE }} \
+            --project=${{ secrets.GCP_PROJECT_ID }}
+
+      - name: Verify kubectl connection
+        run: |
+          kubectl cluster-info
+          kubectl get nodes
+
+      - name: Deploy Frontend to GKE
+        run: |
+          kubectl set image deployment/todo-frontend \
+            todo-frontend=${{ secrets.GCP_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/${{ secrets.ARTIFACT_REPO_NAME }}/todo-frontend:${{ github.sha }} \
+            -n todo-backend
+
+      - name: Wait for Rollout to Complete
+        run: |
+          kubectl rollout status deployment/todo-frontend -n todo-backend
+
+      - name: Verify Deployment
+        run: |
+          echo "=== Frontend Pods Status ==="
+          kubectl get pods -n todo-backend -l app=todo-frontend
+          echo ""
+          echo "=== Frontend Service Status ==="
+          kubectl get svc todo-frontend-service -n todo-backend
+          echo ""
+          echo "=== Frontend Deployment Info ==="
+          kubectl describe deployment todo-frontend -n todo-backend
+
+      - name: Get Frontend Load Balancer IP
+        run: |
+          echo "=== Frontend Load Balancer External IP ==="
+          kubectl get service todo-frontend-service -n todo-backend -o jsonpath='{.status.loadBalancer.ingress[0].ip}'
+          echo ""
