--- a/.github/workflows/frontend-deploy.yml
+++ b/.github/workflows/frontend-deploy.yml
@@ -74,7 +74,7 @@ jobs:
 
 # ==================== JOB: DEPLOY TO GKE (gke-release) ====================
   deploy-to-gke:
-    if: github.ref == 'refs/heads/gke-release'
+    if: github.ref == 'refs/heads/gke-relse'
     runs-on: ubuntu-latest
 
     steps:
